fixed some spacing

--- a/my-react-website/src/style/xtraDetails.css
+++ b/my-react-website/src/style/xtraDetails.css
@@ -42,4 +42,5 @@
 
   .doodImage{
     width: 100%;
+    max-width: 500px;
   }
